# gitstats

./: .codespellrc  .coverage  .gitignore  .gitpod.yml  .mailmap  .pre-commit-config.yaml  .readthedocs-zh.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  README.zh.md  README.zh.rst  action.yml  activity.html  authors.html  collaboration.html  collaboration.js  commits_by_author.plot  commits_by_year.plot  commits_by_year_month.plot  coverage.xml  day_of_week.plot  demo.tape  domains.plot  files.html  files_by_date.plot  gitstats  gitstats.cache  gitstats.conf  gitstats.css  hour_of_day.plot  index.html  lines.html  lines_of_code.plot  (+7 more)
.github/: copilot-instructions.md  dependabot.yml
doc/: AUTHOR  README  gitstats.pod
docs/: AUTHOR.md  FAQ.md  TODO.md  ai-integration.md  ai-integration.zh.md  changelog.md  conf.py  configuration.md  configuration.zh.md  contributors.md  copyright.md  copyright.rst  demo.tape  example.md  faq.md  faq.zh.md  getting-started.md  getting-started.zh.md  index.md  index.rst  index.zh.md  integration.md  integration.zh.md  license.md  requirements.txt
gallery/: index.html
gitstats/: THIRD_PARTY_NOTICES.md  __init__.py  ai_providers.py  ai_summarizer.py  gitstats.css  language.py  main.py  report_creator.py  script.js  utils.py  wrapped.py
main/: activity.html  authors.html  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
scripts/: generate_gallery.py  generate_gallery_index.py
templates/: index.html
tests/: __init__.py  conftest.py  test_basic.py  test_health.py  test_init.py  test_main.py  test_report_creator.py  test_utils.py  (+1 more)
(+397 files in other folders)
